tests/functional/lang/eval-fail-dupAttr-deep.err.exp
error: attribute 'a.b.c' already defined at /pwd/eval-fail-dupAttr-deep.nix:1:3
       at /pwd/eval-fail-dupAttr-deep.nix:1:14:
            1| { a.b.c = 1; a.b.c.a.a = 1; }
             |              ^
            2|
